--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="source/styles/my.css">
     <link rel="stylesheet" href="source/styles/video.css">
-    <title>Document</title>
+    <title>Ocean</title>
 </head>
 
 <body>
